--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ section {
 }
 
 h2 {
-    color: #8B4513;
-    border-bottom: 2px solid #8B4513;
+    color: #033eff;
+    border-bottom: 2px solid #000000;
     padding-bottom: 10px;
 }
 
