--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ h2 {
 }
 
 footer {
-    background-color: #333;
+    background-color: #002efc;
     color: white;
     text-align: center;
     padding: 1rem;
